--- a/style.css
+++ b/style.css
@@ -618,6 +618,7 @@ input[type="radio"] {
     .name {
         text-align: left;
         padding-left: 10px;
+        font-size: 2rem;
     }
     .projects{
       padding: 0 30px;
@@ -641,11 +642,11 @@ input[type="radio"] {
         margin-top: 200px;
     }
     .swing {
-        left: 150px;
+        left: 220px;
         top: 100px;
     }
     .tail{
-        left: 60px;
+        left: 110px;
         top: -103px;
     }
     .blackboard {
