--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@
     --primary: #424242;
     --middle: 0 auto;
   }
-  body {
+  html, body {
+    margin: 0;
+    padding: 0;
     overflow-x: hidden;
-    overflow-y: auto;
 }
 
 *{
@@ -128,6 +129,7 @@
     width: 300px;
     height: 600px;
     position: relative;
+    overflow: hidden;
 }
 .phoneScreen{
     width: 264px;
@@ -137,6 +139,9 @@
     left: 18px;
     border-radius: 25px;
     overflow: scroll;
+    margin: 0;
+    padding: 0; 
+    box-sizing: border-box;
 }
 .phoneScreen::-webkit-scrollbar{
     display: none;
