--- a/style.css
+++ b/style.css
@@ -14,22 +14,23 @@
     --primary: #424242;
     --middle: 0 auto;
   }
+
   html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
-*{
+*, *::before, *::after {
+    box-sizing: inherit;
     padding: 0; 
     margin: 0;
     font-family: 'GrazingMace', sans-serif; 
-    box-sizing: border-box;
-    
-
 }
 .container{
     background-color: black;
+    overflow: hidden;
 }
 
 .salam{
@@ -70,7 +71,7 @@
     background-color: antiquewhite;
 }
 .name{
-    font-size: clamp(2vh,6vw,6vw);
+    font-size: 10vw;
     color: black;
     cursor: default;
     text-align: left;
@@ -205,7 +206,6 @@ align-items: center;
     justify-content: center;
     gap: 20px;
     padding: 50px;
-
 }
 .githubText{
     font-size: 2rem;
@@ -287,7 +287,7 @@ border-top: 40px solid black;
     position: relative;
     width: 100%;
     height: 600px; 
-
+    overflow: hidden;
 }
 #light {
     position: absolute;
@@ -620,11 +620,7 @@ input[type="radio"] {
 
 }
 @media screen and (max-width:1024px) {
-    .name {
-        text-align: left;
-        padding-left: 10px;
-        font-size: 2rem;
-    }
+
     .projects{
       padding: 0 30px;
       text-align: center;
